# PyRuSH

./: .gitignore  .travis.yml  LICENSE  MANIFEST.in  README  README.MD  README.md  README.rst  appveyor.yml  dev-requirements.txt  pyproject.toml  requirements.txt  requirements_jre.txt  setup.cfg  setup.py
.github/workflows/: pip_install_unitest.yml  pytest.yml  run_nosetests.yml  run_pytest.yml  run_pytests.yml  test_build.yml  test_build2.yml  wheelbuilder.yml
PyRuSH/: PyRuSHSentencizer.py  RuSH.py  StaticSentencizerFun.pyx  VERSION  __init__.py  version.py
PyRuSH/tests/: Test_PyRushSentencizer.py  Test_Rush.py
conf/: logging.ini  rush_rules.tsv
notebooks/: BenchMarks.ipynb  PyRuSH benchmark.ipynb  PyRuSH jre demo.ipynb
test/: TestRush.py
tests/: TestRush.py  Test_PyRushSentencizer.py  Test_Rush.py  Test_Rush_w_Logger.py  __init__.py  rush_rules.tsv  test_PyRushSentencizer.py  test_Rush.py  test_Rush_w_Logger.py
travis/: build-wheels.sh  deploy_note.md  note_travis_traps.txt  osx_dev_requirements.txt
