[build-system]
requires = ["setuptools>=61.0.0", "wheel","Cython>=0.25,<3.0","numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "PyRuSH"
dynamic = ["version","dependencies","readme"]
authors = [{name = "Jianlin", email="jianlinshi.cn@gmail.com"}]
description = "A fast implementation of RuSH (Rule-based sentence Segmenter using Hashing)."
requires-python = ">=3.8"
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
version={file = "PyRuSH/VERSION"}
readme={file = ['README.md']}

[project.urls]
Source = "https://github.com/medspacy/PyRuSH"

[tool.setuptools]
include-package-data = true